--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
+    "@angular/animations": "git://github.com/angular/animations-builds.git#animations-preview",
+    "@angular/core": "git://github.com/angular/core-builds.git#animations-preview"
   },
   "devDependencies": {
-    "@angular/common": "~4.1.2",
-    "@angular/compiler": "~4.1.2",
-    "@angular/compiler-cli": "~4.1.2",
-    "@angular/core": "~4.1.2",
-    "@angular/platform-browser": "~4.1.2",
-    "@angular/platform-browser-dynamic": "~4.1.2",
+    "@angular/animations": "git://github.com/angular/animations-builds.git#animations-preview",
+    "@angular/common": "git://github.com/angular/common-builds.git#animations-preview",
+    "@angular/compiler": "git://github.com/angular/compiler-builds.git#animations-preview",
+    "@angular/compiler-cli": "git://github.com/angular/compiler-cli-builds.git#animations-preview",
+    "@angular/core": "git://github.com/angular/core-builds.git#animations-preview",
+    "@angular/platform-browser": "git://github.com/angular/platform-browser-builds.git#animations-preview",
+    "@angular/platform-browser-dynamic": "git://github.com/angular/platform-browser-dynamic-builds.git#animations-preview",
     "@types/jasmine": "2.5.47",
     "@types/node": "^7.0.18",
     "camelcase": "^4.1.0",
